Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-72235

Clients crash when switching tty's on sway

    XMLWordPrintable

Details

    • Linux/Wayland
    • 00c0bad3184e32ff0b1dd799b7ef121eaa737c0d (qt/qtwayland/5.12)

    Description

      To reproduce:

      1. Start sway
      2. Open a Qt application
      3. Move the mouse over it
      4. Switch to a tty
      5. Switch back to sway
      6. Click the mouse

      Causes a crash

      This happens because sway doesn't send enter event when switching back from a tty, leading to a nullptr dereference of the pointer focus surface. This is arguably sway misbehaving, but our clients should not crash. An stderr warning about broken compositor behavior would probably be best.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            johanhelsing Johan Helsing
            johanhelsing Johan Helsing
            Votes:
            1 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes