Client: Fix various input related crashes for events without focus

Some compositors fail to send wl_pointer.enter events before button and axis
events. This led to nullptr dereference crashes.

[ChangeLog][QPA plugin] Fixed a crash caused by compositors sending incorrect
pointer events.

Fix it by adding nullptr checks before trying to access the pointer focus in
case the compositor didn't send enter, or if something deleted the surface
(it's a QPointer).

This means we are now silently ignoring events for misbehaving compositors
(which is probably not optimal), but I don't see how we can easily distinguish
between a missing enter and a deleted QWaylandSurface without adding more
bookkeeping overhead.

Ditto for wl_keyboard.

Fixes: QTBUG-72235
Change-Id: I4bfaa3da4ebae37b059e1e450975566559edf40b
Reviewed-by: Pier Luigi Fiorini <pierluigi.fiorini@liri.io>